更新 合作團隊 亮點成果

--- a/DB/合作團隊_木創文化攪動深根計畫.html
+++ b/DB/合作團隊_木創文化攪動深根計畫.html
@@ -23,7 +23,7 @@
     // link 有連結時會直接另開連結視窗，不顯示彈出視窗
     const collaborativePartnerMember = [
         {
-            'avatar': 'https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3360/259843898.jpg',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/259843898.jpg',
             'name': '吳舜堂 教授',
             'organization': '單位：通識教務中心',
             'link': '',
