--- a/DB/合作團隊_營造永續貢學環境-文化扎根與創新.html
+++ b/DB/合作團隊_營造永續貢學環境-文化扎根與創新.html
@@ -38,29 +38,95 @@
     // 亮點成果
     const collaborativePartnerHighlights = [
         {
-            'title': '內容待補',
-            'intro': `內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。`,
-            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/701482618.png',
+            'title': '各式海報設計',
+            'intro': `本計畫與貢寮區公所合作行銷貢寮地方文化，透過各項文宣產出及活動達成地方文化行銷及文化扎根與創新。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3378/01.jpg',
             'link': '#',
         },
         {
-            'title': '內容待補',
-            'intro': `內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。`,
-            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/337140513.png',
+            'title': '明信片設計',
+            'intro': `設計製作貢寮特色明信片，藉此可以行銷貢寮，讓民眾可以看見美麗的貢寮。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3378/02.jpg',
             'link': '#',
         },
         {
-            'title': '內容待補',
-            'intro': `內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。`,
-            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/3.png',
+            'title': '美化貢寮彩繪',
+            'intro': `社會責任計畫與勞作教育合作，帶者約四十個北科學生到貢寮老街，進行牆面彩繪，當地的居民看見年輕人願意走進偏鄉，每個人心裡也都很開心。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3378/03.jpg',
             'link': '#',
         },
+        {
+            'title': '貢寮雞母嶺',
+            'intro': `貢寮雞母嶺是一個非常具有一方特色的地方，梯田為最大的特色，雞母嶺也有東北角特色的石花凍、憨吉貴製作體驗課程等等。本計劃與雞母嶺負責人蕭先生合作改造並行銷雞母嶺。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3378/04.jpg',
+            'link': '#',
+        },
+        {
+            'title': '貢寮小日子粉專經營',
+            'intro': `由臉書及Instagram兩大社群平台更新貢寮現況以及活動，藉此宣傳貢寮文化。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3378/05.jpg',
+            'link': '#',
+        },
+        {
+            'title': '專刊製作',
+            'intro': `製作專刊紀錄永續貢寮計畫所有相關活動，以及達成效益。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3378/14.jpg',
+            'link': '#',
+        },
+        {
+            'title': '海女文化及觀光推廣',
+            'intro': `海女文化是貢寮已經快沒落的文化，因為這份工作極度的辛苦，年輕人也不願意待在鄉村，現在尚未退休的海女都是六七十歲的阿嬤。為了記錄這想特別的文化，並讓大家認識，本計劃和貢寮區公所合作產出相關文宣。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3378/06.jpg',
+            'link': '#',
+        },
+        {
+            'title': '藍曬工作坊',
+            'intro': `由簡永彬老師至貢寮國中教授藍曬工藝創作課程，讓貢寮國中的學生們了解藍曬工藝的原理，並用他們的想像力創造出屬於自己的作品。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3378/07.jpg',
+            'link': '#',
+        },
+        {
+            'title': '實境解謎工作坊',
+            'intro': `利用「宗教概論」這門課去延伸探討貢寮這充滿文化及信仰的地方，並以當地廟宇為構想設計書地方特色實境解謎小書。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3378/08.jpg',
+            'link': '#',
+        },
+        {
+            'title': 'AR工作坊',
+            'intro': `與北科大互動系合作將新興的ＡＲ科技帶進貢寮國中，讓他們能夠了解並設計、運用ＡＲ製作軟體。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3378/09.jpg',
+            'link': '#',
+        },
+        {
+            'title': '製作分幣機學程式工作坊',
+            'intro': `透過製作錢幣分類機的勞作活動來知道寫程式的方法，解此提升貢寮國小的教育。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3378/10.jpg',
+            'link': '#',
+        },
+        {
+            'title': '玩桌遊學理財工作坊',
+            'intro': `透過遊玩理財相關桌遊，讓貢寮國小的小朋友們對於理財方面能有更深入的了解，藉此提升貢寮國小的教育。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3378/11.jpg',
+            'link': '#',
+        },
+        {
+            'title': '小小導覽員培訓-YOUTUBER',
+            'intro': `小小導覽員培訓，首先讓貢寮國小的人更了解自己家鄉的歷史，在給他們口語能力上的訓練，並透過網路媒體平台(YOUTUBE)傳播、推廣自己家鄉。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3378/12.jpg',
+            'link': '#',
+        },
+        {
+            'title': '【領袖營】籌備中項目',
+            'intro': `此營隊包含的課程有機械動力車工作坊與定向越野實作，目的在於培養小小領袖。機械動力車能夠培養邏輯性以及耐心。定向越野訓練能增進團隊合作、溝通領導及探究規劃的能力。結合跑讀貢寮活動也能夠觸發學生對區域發展、產業延續、文化再造等面向的認識。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3378/13.jpg',
+            'link': '#',
+        }
     ]
 
     // 心得回饋
     const collaborativePartnerFeedbacks = [
         {
-            'avatar': 'https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3371/10.png',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/9.png',
             'name': '同學 A',
             'content': '我覺得USR開的課程都能夠讓我們從做中學，不是像一般上課一樣只是聽講而已，這樣的學習方式我認為是非常優質的，能夠讓學生們更印象深刻，也能夠快樂學習。',
         }
