--- a/DB/合作團隊_陶藝文化培力．鶯歌地方創生.html
+++ b/DB/合作團隊_陶藝文化培力．鶯歌地方創生.html
@@ -31,21 +31,34 @@
     // 亮點成果
     const collaborativePartnerHighlights = [
         {
-            'title': '內容待補',
-            'intro': `內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。`,
-            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/701482618.png',
+            'title': '陶瓷彩繪培力工作坊',
+            'intro': `釉下彩繪青花與紋飾課程，於7/7開課，由存仁堂汪弘玉及李存仁老師，帶領學員進行釉下青花培訓。
+                    8月份則由在地傳統陶瓷彩繪藝師林發權老師領航，落實文化培力，透過學員深入體驗與學習，協助其未來進行商品開發及創意創造。9月份利用課程教學，在體驗釉上彩繪的同時，討論透過文化特色發展出順應時代潮流之文創商品。。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3377/01.jpg',
             'link': '#',
         },
         {
-            'title': '內容待補',
-            'intro': `內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。`,
-            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/337140513.png',
+            'title': '陶瓷彩繪培力工作坊 - 成果發表 - 瓷繪',
+            'intro': `將全年度陶瓷彩繪工作坊及109-1之西洋彩繪體驗課程之成果，加以分類展示於北科大人文實驗室平台，利用分類展示及展場文案呈現提供一般民眾了解、體驗、學習陶瓷彩繪的機會。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3377/02.jpg',
             'link': '#',
         },
         {
-            'title': '內容待補',
-            'intro': `內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。`,
-            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/3.png',
+            'title': '霽 - 陶瓷跨界展演',
+            'intro': `以陶瓷彩繪USR計畫主題延伸，邀請鶯歌六位創作者參與展出，30位國內外藝術家以青花原料之氧化鈷作為展覽主題，鏈結北科大藝文中心平台，交流展示藝術家的創作精神與理念以及多元應用的可能性，同時出版展覽專輯達到宣傳流通之用。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3377/03.jpg',
+            'link': '#',
+        },
+        {
+            'title': '工藝技法紀錄保存',
+            'intro': `工藝技法紀錄保存，以陶瓷彩繪USR計畫為主題，訪問鶯歌七位陶瓷彩繪創作者，以鶯歌彩繪陶瓷技法之保存與傳習為目標，分享陶瓷彩繪的技法經驗，藉編輯出版專書及影像紀錄，啟發台灣學院中缺席的彩繪教育。分別為林發權(日本赤繪)、李存仁(青花應用)、李思樺(雕塑與陶瓷彩繪)、汪弘玉(青花釉下彩)、曾祥軒(繡花浮彩)、張美雲(法華彩)老師等技法紀錄。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3377/04.jpg',
+            'link': '#',
+        },
+        {
+            'title': '比賽及研究發表 2020國際咖啡杯大賽 - 初審',
+            'intro': `鶯歌陶瓷博物館首屆國際咖啡杯大賽，北科大同學3件作品於初賽中獲選，共計22國家，221件作品參賽。`,
+            'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3377/05.jpg',
             'link': '#',
         },
     ]
