--- a/Desktop/合作團隊/亮點成果.html
+++ b/Desktop/合作團隊/亮點成果.html
@@ -52,11 +52,12 @@
     }
 
     .collaborative-partner-highlight-content {
-        padding: 35px 0 55px 0;
+        /* padding: 35px 0 55px 0; */
         font-size: 25px;
         line-height: 1.6;
         letter-spacing: 3px;
         color: #707070;
+        white-space: pre-line;
     }
 
     .collaborative-partner-highlight-content-button {
