新增亮點成果連結

--- a/DB/合作團隊_青銀共創．友善療癒綠社區.html
+++ b/DB/合作團隊_青銀共創．友善療癒綠社區.html
@@ -34,25 +34,25 @@
             'title': '豐沛團隊能量，綠色療癒跨領域整合',
             'intro': `【老年建築學】- 全台第一位園藝治療師黃盛璘分享近年推廣療癒綠生活的經驗，透過跨領域的交流拓展學生的視角，並給予學生初入社區的建議。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3379/01.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-55.php?Lang=zh-tw',
         },
         {
             'title': '豐沛團隊能量，齊心完成社區調查',
             'intro': `社區調查結果及問題點，研究生及職研究生15名(夜間部及日間部)期中簡報昌隆里、民輝里整體社區調查。選課同學分析社區後，提出社區改善願景涵括多元共生住宅、日照機構、智慧日照、團體家屋、照顧咖啡廳、友善商店及步行街等規劃報告。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3379/02.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-55.php?Lang=zh-tw',
         },
         {
             'title': '落實大學社會實踐，拜訪里里辦公室',
             'intro': `【拜訪民輝里長】說明未來計畫期望，展現上半年度計畫成果，了解疫情減緩後居民活動情形與安排工作坊日程，並敲定於8月13日於民輝里辦居民KJ法討論說明會，9月10進行療癒工作坊，並將於7月22日拜訪昌隆里里長。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3379/03.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-55.php?Lang=zh-tw',
         },
         {
             'title': '落實大學社會實踐，拜訪里里辦公室',
             'intro': `【拜訪昌隆里長】說明未來計畫期望，展現上半年度計畫成果，了解疫情減緩後居民活動情形與里長對於計畫未來的期待。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3379/11.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-55.php?Lang=zh-tw',
         },
         {
             'title': '落實大學社會實踐，拜訪里里辦公室',
@@ -62,7 +62,7 @@
                     參與：5位同學，30位居民，昌隆里長
                     說明：社區里民說明會，簡報計畫來由與療癒工作坊內容，運用KJ法與居民互動了解社區優缺點。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3379/04.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-55.php?Lang=zh-tw',
         },
         {
             'title': '落實大學社會實踐，拜訪里里辦公室',
@@ -73,7 +73,7 @@
                     說明：社區里民說明會，簡報計畫來由與療癒工作坊內容，運用KJ法與居民互動了解社區優缺點。
                     `,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3379/12.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-55.php?Lang=zh-tw',
         },
         {
             'title': '五感體驗，療癒綠工作坊',
@@ -83,7 +83,7 @@
                     說明：邀請黃盛璘老師協同主持綠色療癒工作坊，製作花便當，以花茶及花便當製作體驗五感
                     `,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3379/05.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-55.php?Lang=zh-tw',
         },
         {
             'title': '五感體驗，療癒綠工作坊',
@@ -93,25 +93,25 @@
                     說明：邀請黃盛璘老師協同主持綠色療癒工作坊，製作花便當，以花茶及花便當製作體驗五感。
                     `,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3379/06.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-55.php?Lang=zh-tw',
         },
         {
             'title': '長照2.0，日間照顧中心發展趨勢',
             'intro': `社區小規模多機能日照中心設計模擬學生與專家討論社區問題及社區閒置空間轉為小規模多機能日照中心模擬，當天活動照片，社區閒置空間轉為小規模多機能日照中心模擬，部分圖面與社區模型。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3379/07.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-55.php?Lang=zh-tw',
         },
         {
             'title': '面對高齡社會，多元共生住宅發展趨勢',
             'intro': `學生透過實地場勘、調查、草圖設計到模型製作，向專家討論社區問題，面對高齡社會，老人住宅結合多世代交流之設計。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3379/08.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-55.php?Lang=zh-tw',
         },
         {
             'title': '樂齡友善賣場步行街設計',
             'intro': `進行民輝里社區工研醋步行街設計改造規畫配置圖。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3379/09.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-55.php?Lang=zh-tw',
         },
         {
             'title': '2020 ICDIH 國際研討會',
@@ -122,7 +122,7 @@
                     Promotion of Age-Friendly Communities through Green Restorative Environments
                     `,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3379/10.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-55.php?Lang=zh-tw',
         }
     ]
 
