--- a/DB/合作團隊_智慧物聯感測漁業.html
+++ b/DB/合作團隊_智慧物聯感測漁業.html
@@ -69,19 +69,19 @@
             'title': '內容待補',
             'intro': `內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/2.png',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-52.php?Lang=zh-tw',
         },
         {
             'title': '內容待補',
             'intro': `內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/3.png',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-52.php?Lang=zh-tw',
         },
         {
             'title': '內容待補',
             'intro': `內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/4.png',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-52.php?Lang=zh-tw',
         },
     ]
 
