--- a/DB/合作團隊_原住民部落安居構築與綠色樂業推動計畫.html
+++ b/DB/合作團隊_原住民部落安居構築與綠色樂業推動計畫.html
@@ -64,7 +64,7 @@
             'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/824110039.jpg',
             'name': '羅恩加 博士',
             'organization': '羅慶郎自然農場博士',
-            'link': `#`,
+            'link': `none`,
         },
     ];
 
@@ -78,62 +78,61 @@
             'intro': `建築團隊擁有多年義築與施工經驗，盤點部落社區服務及公共空間問題，利用大學的訓練課程，推動部落返鄉青年新住宅運動，期望藉由建築新生活品質吸引部落青年返鄉。
                       \n學生透過實地場勘、調查、草圖設計到模型製作，向部落耆老及教會領導提案，雙方交流開拓未來願景，促使部落營建新住宅香格里拉。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/1.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-49.php?Lang=zh-tw',
         },
         {
             'title': '教學實踐改革 - 石磊國小109-1特色課程設計',
             'intro': `與石磊國小共同設計規劃109年度校本特色課程設計，以農耕為基礎，加入攝影、品牌行銷、訪談與網頁設計等課程，設計以「品牌經營」為特色課程重點內容。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/02.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-49.php?Lang=zh-tw',
         },
         {
             'title': '部落創新行銷 - 友善農業推廣講座',
             'intro': `承襲上一期 以推廣友善農法精神為主軸，結合餐廳及食作工作室辦理石磊友善蔬菜推廣活動，共同舉辦實作體驗工作坊，同步拓展潛力消費者與可能合作企業的拓展連結。 `,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/03.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-49.php?Lang=zh-tw',
         },
-
         {
             'title': '部落創新行銷 - 小農系列微電影',
             'intro': `團隊持續性優化品牌旗下的系列輔銷物，並於今年推動小農形象影片計畫， 以友善農法、信仰、土地認同等主軸，以人物紀實及場域探勘為主體，為品牌 串連的四位小農拍攝形象影片。四支影片均在臉書粉專及 Youtube 平台『石磊友善蔬菜』上線，除了推廣部落友善農法精神，透過影片更串 連起在外地生活的族人，主動聯繫銷售部落蔬菜的合作事宜，凝聚社群情感與向心力。 `,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/04.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-49.php?Lang=zh-tw',
         },
         {
             'title': '部落社區規劃 - 食在好買直販所',
             'intro': `源自「共好」的初衷，由北科建築吳南葳老師與宜蘭木本設計李國玄老師帶領工作坊，設計搭建小型部落「直賣所」，除了實用性及平台得天獨厚的地理優勢，希望在欣賞美景休息之餘，可以將觀光客留在平台上，選購部落的農特產、工藝，為平台增添話題性，也可以為在地部落小農增加更多的曝光度，回饋在地。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/05.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-49.php?Lang=zh-tw',
         },
         {
             'title': '部落社區規劃 - 直販所開幕活動 LOKAH高山雲霧市集',
             'intro': `2020 LOKAH高山雲霧市集暨《食在好買直販所》開幕活動，提供所有符合品牌精神「友善、健康、在地」的小農，對外展銷農產的據點，為部落第一處品牌實體店面，凝聚部落共識及對友善農業的理想。 `,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/06.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-49.php?Lang=zh-tw',
         },
         {
             'title': '部落社區規劃 - 泰雅傳統智慧冷窖',
             'intro': `由部落耆老提案，結合建築、冷鏈及土木專業，師生與部落族人共同再造泰雅傳統智慧冷窖，選用更環保、更能耐濕防腐的複合式建材，以水泥取代土牆，導入冷冽山泉水，搭建同時具有泰雅傳統智慧及現代技術的天然冰箱。第一期完成建築外觀，明年度預計完成外側蔬菜包裝區。 `,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/07.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-49.php?Lang=zh-tw',
         },
         {
             'title': '部落創新行銷 - 部落深度文化體驗',
             'intro': `社會責任與社會創新課程，以石磊USR計畫場域作為主題報告討論素材，來引導同學參與大學社會責任工作，增強進行社會創新的態度、認知和行為，並舉辦初次文化探訪活動，集結石磊部落、宇老部落、馬里光部落，燃起部落文化傳承熱情。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/08.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-49.php?Lang=zh-tw',
         },
         {
             'title': 'USR跨校交流 - ＳＩＧ跨校社群交流活動',
             'intro': `邀請跨校團隊分享執行USR亮點經驗，並進行SDGs議題討論，促進未來跨校、跨領域專業團隊合作。參與學校：政治大學、海洋大學、中原大學、中華科大及北科大USR、USR-hub團隊。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/822535789.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-49.php?Lang=zh-tw',
         },
         {
             'title': '國際交流 - NTUT x ARCHCU工作坊',
             'intro': `與泰國朱拉隆功大學，舉辦年度首次兩校的設計學院國際交流《NTUT x ARCHCU工作坊》，以系列分析繪測城市景觀為主題，進行城市建築分析分享，兩校學生以混搭的方式進行分組，跨越語言及文化的差異，在分組完成工作坊任務的過程中，提升學生「溝通力」、「專業力」及「實踐力」國際移動力養成等要素。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/9.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-49.php?Lang=zh-tw',
         },
         {
             'title': '媒體露出 - 設計學院USR團隊專訪',
@@ -141,7 +140,7 @@
                       7/2 & 7/15-16 民視《看見教育再進度》專題採訪
                       8/3 天下雜誌專訪《用科技蓋冷窖天然冰箱，北科大替石磊部落打造不斷鍊農業》`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/10.jpg',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-49.php?Lang=zh-tw',
         }
     ]
 
@@ -205,7 +204,6 @@
                     後來吳思寰學長讓我們在沒有架設360的狀況下實際的操控空拍機後才知道，原來控制空拍機沒有想像中的容易。要想一下轉彎或是向上、向下應該是左邊的遙控還是右邊，更不要說還要同時控制鏡頭轉向了。根本會讓腦袋捲成麻花捲。
                     羅敏、婕安學姊、學長還有部落每個人對我們的照顧。`,
         },
-
         {
             'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/249129036.jpg',
             'name': '建築系: 陳淨妤',
