--- a/DB/合作團隊_木創文化攪動深根計畫.html
+++ b/DB/合作團隊_木創文化攪動深根計畫.html
@@ -87,19 +87,19 @@
             'title': '內容待補',
             'intro': `內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/701482618.png',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-50.php?Lang=zh-tw',
         },
         {
             'title': '內容待補',
             'intro': `內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/337140513.png',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-50.php?Lang=zh-tw#',
         },
         {
             'title': '內容待補',
             'intro': `內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/3.png',
-            'link': '#',
+            'link': 'https://osausr.ntut.edu.tw/p/426-1001-50.php?Lang=zh-tw',
         },
     ]
 
