--- a/Desktop/合作團隊/合作團隊複製用模板.html
+++ b/Desktop/合作團隊/合作團隊複製用模板.html
@@ -24,7 +24,7 @@
                     <p class="ellipsis-line-5"></p>
                 </div>
 
-                <a class="collaborative-partner-highlight-content-button-link text-decoration-none">
+                <a class="collaborative-partner-highlight-content-button-link text-decoration-none" target="_blank">
                     <div
                         class="collaborative-partner-highlight-content-button d-flex justify-content-center align-items-center">
                         <span>課程介紹</span>
