--- a/DB/校內下載.html
+++ b/DB/校內下載.html
@@ -9,13 +9,13 @@
         {
             'date': '2020-11-30',
             'title': '北科大_USR Hub 期末報告_計畫名稱',
-            'fileLink': 'https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3374/595345506.docx',
+            'fileLink': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3374/595345506.docx',
             'fileType': 'WORD',
         },
         {
             'date': '2020-11-30',
             'title': 'USR計畫資料收集表單(109年01月至12月)_計畫名稱',
-            'fileLink': 'https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3374/407522916.xlsx',
+            'fileLink': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3374/407522916.xlsx',
             'fileType': 'EXCEL',
         },
         {
