--- a/Desktop/合作團隊/亮點成果.html
+++ b/Desktop/合作團隊/亮點成果.html
@@ -12,10 +12,10 @@
     }
 
     .collaborative-partner-highlight-title {
-        margin: 149px 0 60px 0;
+        margin: 149px 0 60px 0 !important;
         color: #4998b2;
-        font-size: 45px;
-        line-height: 1.33;
+        font-size: 45px !important;
+        line-height: 1.33 !important;
     }
 
     .collaborativePartnerHighlightContentsContainer {
@@ -45,9 +45,9 @@
     }
 
     .collaborative-partner-highlight-content-title {
-        font-size: 35px;
-        line-height: 1.34;
-        letter-spacing: 4.2px;
+        font-size: 35px !important;
+        line-height: 1.34 !important;
+        letter-spacing: 4.2px !important;
         color: #000000;
     }
 
@@ -104,7 +104,7 @@
             $(el).find('.collaborative-partner-highlight-content-title').text(collaborativePartnerHighlights[i].title);
             $(el).find('.ellipsis-line-5').text(collaborativePartnerHighlights[i].intro);
             $(el).find('.collaborative-partner-highlight-content-image').css('background-image', `url(${collaborativePartnerHighlights[i].image})`);
-            $(el).find('.collaborative-partner-highlight-content-button-link').attr('href', collaborativePartnerHighlights[i].link);
+            $(el).find('.collaborative-partner-highlight-content-button-link').attr('href', collaborativePartnerHighlights[i].link + '#' + i);
             // 新增入 UI
             $('#collaborativePartnerHighlightContentsWrapper').append(el);
         }
