--- a/Desktop/實踐成果/年度專刊.html
+++ b/Desktop/實踐成果/年度專刊.html
@@ -19,7 +19,7 @@
             <div class="col-md-4 book-wrapper" style="cursor: pointer;">
                 <div class="d-flex flex-column">
                     <div class="p-2">
-                        <a href="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/774919920.pdf" target="_blank"
+                        <a href="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/534917697.pdf" target="_blank"
                             rel="noreferrer noopener">
                             <img class="book-image"
                                 src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3225/531686235.png" />
@@ -40,6 +40,7 @@
         background-repeat: no-repeat;
         width: 100vw;
         margin-top: 120px;
+        margin-bottom: 98px;
     }
 
     #annualBookTitle {
