--- a/Desktop/合作團隊/亮點成果分頁.html
+++ b/Desktop/合作團隊/亮點成果分頁.html
@@ -1,5 +1,5 @@
 <!-- 亮點介紹樣板 -->
-<div class="container-fluid" style="padding: 10vw;">
+<div id="highlightWrapper" class="container-fluid">
     <div class="row">
         <p id="contentTitle" class="display-4 mt-5"><b>合作團隊標題</b></p>
     </div>
@@ -29,6 +29,12 @@
     </div>
 </div>
 <style type="text/css">
+    #highlightWrapper {
+        padding: 5vw 10vw;
+        margin-top: 120px;
+        min-height: 75vh;
+    }
+
     #contentTitle {
         font-size: 38px !important;
         color: #000000;
