--- a/Desktop/關於我們/組織成員.html
+++ b/Desktop/關於我們/組織成員.html
@@ -66,8 +66,32 @@
             <!-- 04 -->
             <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
                 data-aos="fade-left">
-
                 <div class="d-block d-md-none">
+                    <img class="organization-member-image"
+                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/298108906.png" />
+                </div>
+
+                <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
+                    <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
+                        <p class="organization-member-name">曹筱玥 教授 (互動系主任)</p>
+                    </div>
+
+                    <div>
+                        <p class="organization-member-content">職位:副執行長<br />
+                            學校分機:(02)2771-2171 #2809</p>
+                    </div>
+                </div>
+
+                <div class="d-none d-md-block">
+                    <img class="organization-member-image"
+                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/298108906.png" />
+                </div>
+            </div>
+            <!-- 05 -->
+            <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
+                data-aos="fade-right">
+
+                <div>
                     <img class="organization-member-image"
                         src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/729337629.png" />
                 </div>
@@ -83,32 +107,34 @@
                     </div>
                 </div>
 
-                <div class="d-none d-md-block">
-                    <img class="organization-member-image"
-                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/729337629.png" />
-                </div>
-            </div>
-            <!-- 05 -->
-            <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
-                data-aos="fade-right">
-                <div><img class="organization-member-image"
-                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/404100551.png" /></div>
 
-                <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
-                    <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
-                        <p class="organization-member-name">楊琇惠 教授(文化事業發展學系主任)</p>
-                    </div>
-
-                    <div>
-                        <p class="organization-member-content">職位:實踐組長<br />
-                            學校分機:(02)2771-2171 #5601</p>
-                    </div>
-                </div>
             </div>
             <!-- 06 -->
             <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
                 data-aos="fade-left">
-                <div class="d-block d-md-none">
+                <div class="d-block d-md-none"><img class="organization-member-image"
+                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/752553747.png" /></div>
+
+                <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
+                    <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
+                        <p class="organization-member-name">范政揆 教授(國際事務處組長)</p>
+                    </div>
+
+                    <div>
+                        <p class="organization-member-content">職位:實踐組長<br />
+                            學校分機:(02)2771-2171 #2892</p>
+                    </div>
+                </div>
+
+                <div class="d-none d-md-block">
+                    <img class="organization-member-image"
+                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/752553747.png" />
+                </div>
+            </div>
+            <!-- 07 -->
+            <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
+                data-aos="fade-right">
+                <div>
                     <img class="organization-member-image"
                         src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/563741094.png" />
                 </div>
@@ -125,15 +151,12 @@
                     </div>
                 </div>
 
-                <div class="d-none d-md-block">
-                    <img class="organization-member-image"
-                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/563741094.png" />
-                </div>
+
             </div>
-            <!-- 07 -->
+            <!-- 08 -->
             <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
-                data-aos="fade-right">
-                <div><img class="organization-member-image"
+                data-aos="fade-left">
+                <div class="d-block d-md-none"><img class="organization-member-image"
                         src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/401269290.png" /></div>
 
                 <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
@@ -146,6 +169,11 @@
                             學校分機:(02)2771-2171 #1221<br />
                             Email: heywoo1234@mail.ntut.edu.tw</p>
                     </div>
+                </div>
+
+                <div class="d-none d-md-block">
+                    <img class="organization-member-image"
+                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/401269290.png" />
                 </div>
             </div>
         </div>
