重構組織成員

--- a/Desktop/關於我們/組織成員.html
+++ b/Desktop/關於我們/組織成員.html
@@ -2,183 +2,10 @@
     <div class="float-on-bg bg-white organization-member-container">
         <p class="float-on-bg bg-white organization-member-title w-100 text-center">組織成員</p>
 
-        <div>
-            <!-- 01 -->
-            <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
-                data-aos="fade-right">
-                <div>
-                    <img class="organization-member-image"
-                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/581610774.png" />
-                </div>
-
-                <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
-                    <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
-                        <p class="organization-member-name">王錫福 教授(校長)</p>
-                    </div>
-
-                    <div>
-                        <p class="organization-member-content">職位:主 任<br />
-                            學校分機:(02)2771-2171 #1001</p>
-                    </div>
-                </div>
-            </div>
-            <!-- 02 -->
-            <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
-                data-aos="fade-left">
-                <div class="d-block d-md-none">
-                    <img class="organization-member-image"
-                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/417200873.png" />
-                </div>
-
-                <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
-                    <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
-                        <p class="organization-member-name">楊重光 教授(副校長)</p>
-                    </div>
-
-                    <div>
-                        <p class="organization-member-content">職位:副 主 任<br />
-                            學校分機:(02)2771-2171 #1071</p>
-                    </div>
-                </div>
-
-                <div class="d-none d-md-block">
-                    <img class="organization-member-image"
-                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/417200873.png" />
-                </div>
-            </div>
-            <!-- 03 -->
-            <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
-                data-aos="fade-right">
-                <div><img class="organization-member-image"
-                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/567669650.png" /></div>
-
-                <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
-                    <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
-                        <p class="organization-member-name">黃志弘 教授(設計學院院長)</p>
-                    </div>
-
-                    <div>
-                        <p class="organization-member-content">職位:執行長<br />
-                            學校分機:(02)2771-2171 #2915</p>
-                    </div>
-                </div>
-            </div>
-            <!-- 04 -->
-            <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
-                data-aos="fade-left">
-                <div class="d-block d-md-none">
-                    <img class="organization-member-image"
-                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/298108906.png" />
-                </div>
-
-                <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
-                    <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
-                        <p class="organization-member-name">曹筱玥 教授 (互動系主任)</p>
-                    </div>
-
-                    <div>
-                        <p class="organization-member-content">職位:副執行長<br />
-                            學校分機:(02)2771-2171 #2809</p>
-                    </div>
-                </div>
-
-                <div class="d-none d-md-block">
-                    <img class="organization-member-image"
-                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/298108906.png" />
-                </div>
-            </div>
-            <!-- 05 -->
-            <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
-                data-aos="fade-right">
-
-                <div>
-                    <img class="organization-member-image"
-                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/729337629.png" />
-                </div>
-
-                <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
-                    <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
-                        <p class="organization-member-name">陳建文 教授(通識中心主任)</p>
-                    </div>
-
-                    <div>
-                        <p class="organization-member-content">職位:策略組長<br />
-                            學校分機:(02)2771-2171 #3001、3026</p>
-                    </div>
-                </div>
-
-
-            </div>
-            <!-- 06 -->
-            <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
-                data-aos="fade-left">
-                <div class="d-block d-md-none"><img class="organization-member-image"
-                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/752553747.png" /></div>
-
-                <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
-                    <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
-                        <p class="organization-member-name">范政揆 教授(國際事務處組長)</p>
-                    </div>
-
-                    <div>
-                        <p class="organization-member-content">職位:實踐組長<br />
-                            學校分機:(02)2771-2171 #2892</p>
-                    </div>
-                </div>
-
-                <div class="d-none d-md-block">
-                    <img class="organization-member-image"
-                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/752553747.png" />
-                </div>
-            </div>
-            <!-- 07 -->
-            <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
-                data-aos="fade-right">
-                <div>
-                    <img class="organization-member-image"
-                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/563741094.png" />
-                </div>
-
-                <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
-                    <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
-                        <p class="organization-member-name">張佳琳 小姐</p>
-                    </div>
-
-                    <div>
-                        <p class="organization-member-content">職位:專任助理<br />
-                            學校分機:(02)2771-2171 #1220<br />
-                            Email: lynnchang@mail.ntut.edu.tw</p>
-                    </div>
-                </div>
-
-
-            </div>
-            <!-- 08 -->
-            <div class="d-flex flex-column flex-md-row align-items-center organization-member-list mt-4 mt-md-0"
-                data-aos="fade-left">
-                <div class="d-block d-md-none"><img class="organization-member-image"
-                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/401269290.png" /></div>
-
-                <div class="d-flex flex-column justify-content-center mt-5 mt-md-0">
-                    <div class="d-flex organization-member-wrapper justify-content-center align-items-center">
-                        <p class="organization-member-name">陳國華 先生</p>
-                    </div>
-
-                    <div>
-                        <p class="organization-member-content">職位:專任助理<br />
-                            學校分機:(02)2771-2171 #1221<br />
-                            Email: heywoo1234@mail.ntut.edu.tw</p>
-                    </div>
-                </div>
-
-                <div class="d-none d-md-block">
-                    <img class="organization-member-image"
-                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/401269290.png" />
-                </div>
-            </div>
-        </div>
+        <div id="Div_Organization_Members_Wrapper"></div>
     </div>
 </section>
+
 <style type="text/css">
     .organization-member-title {
         padding: 180px 0 46px;
@@ -192,8 +19,7 @@
     }
 
     .organization-member-list {
-        margin-bottom: 54px;
-        padding: 0 50px;
+        margin-bottom: 87px;
     }
 
     .organization-member-image {
@@ -217,8 +43,11 @@
         color: #000000;
     }
 
-    .organization-member-content {
+    .organization-member-content-wrapper {
         margin: 56px 29px 0px 29px;
+    }
+
+    .organization-member-content {
         font-size: 25px;
         line-height: 1.6;
         text-align: left;
@@ -236,12 +65,12 @@
             padding: 0;
         }
 
-        .organization-member-list:nth-child(even) {
-            margin-left: 284px;
+        .organization-member-list:nth-child(odd) {
+            margin-left: 15%;
         }
 
-        .organization-member-list:nth-child(odd) {
-            margin-left: 914px;
+        .organization-member-list:nth-child(even) {
+            margin-right: 15%;
         }
 
         .organization-member-image {
@@ -249,3 +78,27 @@
         }
     }
 </style>
+
+<script>
+    $(function () {
+        createOrganizationMembers()
+    });
+
+    function createOrganizationMembers() {
+        if (!organizationMembers.length) { return }
+        for (let i = 0; i < organizationMembers.length; i++) {
+            // 複製 組織成員 模板
+            const el = i % 2 === 0 ? $('#template').find('.organization-member-even-template').clone() : $('#template').find('.organization-member-odd-template').clone();
+
+            // 設定 組織成員 內容 & 事件
+            $(el).find('.organization-member-image').attr("src", organizationMembers[i].avatar);
+            $(el).find('.organization-member-name').text(organizationMembers[i].title);
+            $(el).find('.organization-member-position').text(`職位: ${organizationMembers[i].position}`);
+            $(el).find('.organization-member-tel').text(`學校分機: ${organizationMembers[i].tel}`);
+            organizationMembers[i].email && $(el).find('.organization-member-email').text(`Email: ${organizationMembers[i].email}`);
+
+            // 新增入 UI
+            $('#Div_Organization_Members_Wrapper').append(el);
+        }
+    }
+</script>
