木創文化攪動深根計畫 資料更新

--- a/DB/合作團隊_木創文化攪動深根計畫.html
+++ b/DB/合作團隊_木創文化攪動深根計畫.html
@@ -3,8 +3,8 @@
     const collaborativePartnerMain = {
         'year': '109-111 學年度',
         'title': '木創文化攪動深根計畫',
-        'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/438398622.png',
-        'link': '#',
+        'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/105202953.jpg',
+        'link': 'https://www.facebook.com/ntutidusr/',
     };
 
     // 合作團隊簡介
@@ -59,7 +59,7 @@
             'intro': '范政揆副教授擔任創新設計與知識管理研發中心主任，於創新產品設計、創新與設計策略、醫療健康照護、永續發展和跨域整合上多有著墨，歷年來指導學生榮獲國內外百項設計獎，近年致力於循環經濟與永續設計，從跨域整合的角度結合企業 CSR 和大學的 USR 的能量，以聯合國永續發展的 17 項指標為標的,期望透過Design for SDGs 的手法，讓創新與設計來改變社會與世界。',
         },
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/304636408.jpg',
             'name': '陳殿禮 教授',
             'organization': '單位：工業設計系',
             'link': '',
